--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="icon" href="./image/ball.svg" type="image/svg" />
     <link rel="stylesheet" href="https://use.typekit.net/aba0ebl.css" />
     <title>Plinko</title>
